[package]
name = "node-testing"
version = "0.3.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Test utilities for Stafi node."
edition = "2018"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { rev = "b383cd5d", features = ["test-helpers", "db"],  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-db = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
codec = { package = "parity-scale-codec", version = "1.3.4" }
pallet-grandpa = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-keyring = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-executor = { version = "0.3.1", path = "../executor" }
node-primitives = { version = "0.3.1", path = "../primitives" }
node-runtime = { version = "0.3.1", path = "../runtime" }
sp-core = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-support = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-staking = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-executor = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["wasmtime"] }
sp-consensus = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-test-client = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
wabt = "0.9.2"
sp-api = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-finality-tracker = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-timestamp = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-block-builder = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-block-builder = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git'}
sp-inherents = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { rev = "b383cd5d", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
