[package]
name = "node-testing"
version = "0.4.7"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Test utilities for Stafi node."
edition = "2018"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { branch = "master", features = ["test-helpers", "db"],  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-db = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
codec = { package = "parity-scale-codec", version = "1.3.4" }
pallet-grandpa = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-keyring = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-executor = { version = "0.4.7", path = "../executor" }
node-primitives = { version = "0.4.7", path = "../primitives" }
node-runtime = { version = "0.4.7", path = "../runtime" }
sp-core = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-support = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-staking = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-executor = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["wasmtime"] }
sp-consensus = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-test-client = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-api = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-finality-tracker = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-timestamp = { branch = "master", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-block-builder = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-block-builder = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git'}
sp-inherents = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { branch = "master", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
