[package]
name = "node-testing"
version = "0.4.9"
authors = ["Stafi Technologies <technical@stafi.io>"]
description = "Test utilities for Stafi node."
edition = "2018"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-service = { branch = "m1-compilation", features = ["test-helpers", "db"],  git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-client-db = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
codec = { package = "parity-scale-codec", version = "1.3.4" }
pallet-grandpa = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-indices = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-keyring = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
node-executor = { version = "0.4.9", path = "../executor" }
node-primitives = { version = "0.4.9", path = "../primitives" }
node-runtime = { version = "0.4.9", path = "../runtime" }
sp-core = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-io = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-support = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-session = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-staking = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-executor = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git', features = ["wasmtime"] }
sp-consensus = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
substrate-test-client = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-timestamp = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-transaction-payment = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-treasury = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-api = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-finality-tracker = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-timestamp = { branch = "m1-compilation", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-block-builder = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sc-block-builder = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git'}
sp-inherents = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-blockchain = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { branch = "m1-compilation", git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
