[package]
name = "bridge-tezos"
version = "0.1.0"
authors = ["Howie <technical@stafi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stafi-crypto = { package = "stafi-crypto", path = "../stafi-crypto" }
base_custom = "0.2.0"
hex = "0.4.0"
num-bigint = "0.2"
num-traits = "0.2.8"