[package]
name = "bridge-tezos"
version = "0.1.0"
authors = ["Howie <technical@stafi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stafi-crypto = { package = "stafi-crypto", path = "../stafi-crypto", default-features = false }
base_custom = "0.2.0"
hex = { version = "0.4.0", default-features = false }
num-bigint = { version = "0.2", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
regex = { version = "^1.3", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

[features]
default = ["std"]
std = [
    "hex/std",
    "regex/std",
    "num-traits/std",
    "num-bigint/std",
    "stafi-crypto/std"
]