[package]
name = "stafi-crypto"
version = "0.1.0"
authors = ["Howie <technical@stafi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "^0.20" }
tiny-bip39 = { version = "^0.6" }
rust-crypto = "^0.2"

[dev-dependencies]
hex-literal = "^0.2"

[features]