[package]
name = "stafi-externalrpc"
version = "0.1.0"
authors = ["Raymond <technical@stafi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4.0", optional = true }
reqwest = { version = "=0.9.17", optional = true }

sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "srml-support", default-features = false }
srml-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "srml-system", default-features = false }
inherents = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "substrate-inherents", default-features = false }
primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "substrate-primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
	"serde/std",
	"serde_derive",
	"serde_json",
	"hex",
    "reqwest",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-system/std",
    "inherents/std",
	"primitives/std",
]
