[package]
name = "stafi-externalrpc"
version = "0.1.0"
authors = ["Raymond <technical@stafi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4.0", optional = true }
reqwest = { version = "=0.9.17", optional = true }

sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "paint-support", default-features = false }
paint-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "paint-system", default-features = false }
inherents = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "substrate-inherents", default-features = false }
primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "substrate-primitives", default-features = false }
babe-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "substrate-consensus-babe-primitives", default-features = false }

node-primitives = { path = "../../primitives", default-features = false }

log = "0.4"

[features]
default = ["std"]
std = [
    "codec/std",
	"serde/std",
	"serde_derive",
	"serde_json",
	"hex",
    "reqwest",
	"sr-std/std",
	"sr-io/std",
	"paint-support/std",
	"paint-system/std",
    "inherents/std",
	"primitives/std",
	"sr-primitives/std"
]
