[package]
name = "stafi-fund"
version = "0.1.0"
authors = ["Jun <technical@stafi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hex-literal = "0.2"
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
session = { package = "paint-session", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false, features = ["historical"] }
im-online = { package = "paint-im-online", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

node-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "paint-support/std",
    "sr-primitives/std",
    "paint-system/std",
    "paint-balances/std",
    "node-primitives/std",
    "session/std",
    "im-online/std",
]
