[package]
name = "stafi-multisig"
version = "0.1.0"
authors = ["Stafi Protocol"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
# parity-codec-derive = { version = "2.0", default-features = false }
# parity-scale-codec = { version = "1.0", default_features = false}
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }

[features]
default = ["std"]
std=[
    "serde/std",
    "serde_derive",
    "codec/std",
    # "parity-scale-codec/std",
    # "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
]
