[package]
name = "stafi-multisig"
version = "0.1.0"
authors = ["Howie <technical@stafi.com>", "Raymond <technical@stafi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default_features = false }
serde_derive = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
srml-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default_features = false }
stafi-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std=[
    "serde/std",
    "serde_derive",
    "codec/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
    "stafi-primitives/std",
]
