[package]
name = "stafi-staking"
version = "0.1.0"
authors = ["Tore <technical@stafi.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default_features = false }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
session = { package = "srml-session", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
im-online = { package = "srml-im-online", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

stafi-primitives = { path = "../../primitives", default-features = false }
token-balances = { package = "tokenbalances", path = "../tokenbalances", default-features = false }
stafi-externalrpc = { path = "../stafi-externalrpc", default-features = false }
# stafi-crypto = { path = "../stafi-crypto", version = "0.1.0", default-features = false }

log = "0.4"

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-codec/std",
    "sr-std/std",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
    "session/std",
    "im-online/std",
    "stafi-primitives/std",
    "token-balances/std",
    "stafi-externalrpc/std",
]
