[package]
name = "stafi-staking"
version = "0.1.0"
authors = ["Tore <technical@stafi.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default_features = false }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
paint-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
session = { package = "paint-session", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
im-online = { package = "paint-im-online", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
randomness-collective-flip = { package = "paint-randomness-collective-flip", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

node-primitives = { path = "../../primitives", default-features = false }
token-balances = { package = "tokenbalances", path = "../tokenbalances", default-features = false }
stafi-externalrpc = { path = "../stafi-externalrpc", default-features = false }
stafi-crypto = { path = "../stafi-crypto", default-features = false }
stafi-multisig = { path = "../stafi-multisig", default-features = false }

log = "0.4"

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-codec/std",
    "sr-std/std",
    "sr-primitives/std",
    "paint-support/std",
    "paint-system/std",
    "paint-balances/std",
    "session/std",
    "im-online/std",
    "node-primitives/std",
    "token-balances/std",
    "stafi-externalrpc/std",
    "stafi-multisig/std",
    "randomness-collective-flip/std",
    "stafi-crypto/std",
]
