[package]
name = "stafi-staking"
version = "0.1.0"
authors = ["Tore <technical@stafi.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default_features = false }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
support = { package = "frame-support", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
system = { package = "frame-system", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
session = { package = "pallet-session", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
im-online = { package = "pallet-im-online", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

node-primitives = { path = "../../primitives", default-features = false }
token-balances = { package = "tokenbalances", path = "../tokenbalances", default-features = false }
stafi-offchain-worker = { path = "../stafi-offchain-worker", default-features = false }
stafi-staking-storage = { path = "../stafi-staking-storage", default-features = false }
stafi-crypto = { path = "../stafi-crypto", default-features = false }
stafi-multisig = { path = "../stafi-multisig", default-features = false }

log = "0.4"

[dev-dependencies]
babe = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "pallet-babe", default-features = false }
timestamp = { git = "https://github.com/stafiprotocol/stafi-blockchain", package = "pallet-timestamp", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-codec/std",
    "sr-io/std",
    "sr-std/std",
    "primitives/std",
    "sr-primitives/std",
    "support/std",
    "system/std",
    "balances/std",
    "session/std",
    "im-online/std",
    "node-primitives/std",
    "token-balances/std",
    "stafi-multisig/std",
    "randomness-collective-flip/std",
    "stafi-crypto/std",
]
