[package]
name = "tokenbalances"
version = "0.1.0"
authors = ["Jun <technical@stafi.io>", "Tore <technical@stafi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.2"
serde = { version = "1.0", default-features = false, optional = true }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-timestamp = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

stafi-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "parity-codec/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "primitives/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-balances/std",
    "stafi-primitives/std",
    "srml-timestamp/std",
]
