[package]
name = "tokenbalances"
version = "0.1.0"
authors = ["Jun <technical@stafi.io>", "Tore <technical@stafi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.2"
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
support = { package = "frame-support", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
system = { package = "frame-system", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

node-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "num-traits/std",
    "parity-codec/std",
    "sr-std/std",
    "sr-io/std",
    "support/std",
    "primitives/std",
    "sr-primitives/std",
    "system/std",
    "balances/std",
    "node-primitives/std",
    "randomness-collective-flip/std"
]
