[package]
name = "chainbridge"
version = "0.3.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-std = { rev = "b383cd5d", default-features = false, git = "https://github.com/stafiprotocol/stafi-blockchain.git" }
sp-runtime = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-core = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

# frame dependencies
frame-support = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
pallet-balances = { rev = "b383cd5d", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }

[build-dependencies]
wasm-builder-runner = { version = "1.0.6", package = "substrate-wasm-builder-runner", path = "../../../utils/wasm-builder-runner" }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
]
