[package]
name = "claims"
version = "0.1.1"
authors = ["Stafi Technologies <technical@stafi.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0-rc4", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
frame-system = { version = "2.0.0-rc4", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-runtime = { version = "2.0.0-rc4", default-features = false, git = 'https://github.com/stafiprotocol/stafi-blockchain.git' }
sp-std = { version = "2.0.0-rc4", default-features = false, git = "https://github.com/stafiprotocol/stafi-blockchain.git" }

node-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "node-primitives/std",
]
